5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1798_2563.log
== TEST (2019-06-05 14:00:38) 
-- CODE:
from numpy import*
v = array(eval(input("")))
i = 0
a = 0
while (size(v) > 1):
	i = i + 1
	for element in v:
		if (v[i] >= 5 and v[i] < 7):
			a = a + 1
print(a)
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:01:51) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	i = i + 1
	for element in v:
		if (v[i] >= 5 and v[i] < 7):
			a = a + 1
print(a)
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:02:39) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for element in v:
		if (v[i] >= 5 and v[i] < 7):
			a = a + 1
	i = i + 1
print(a)
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:03:11) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for element in v:
		if (v >= 5 and v < 7):
			a = a + 1
print(a)
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:08:30) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for element in v:
		if (v >= 5 and v < 7):
			a = a + 1
print(a)
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:09:04) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (v >= 5 and v < 7):
			a = a + 1
print(a)
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:10:02) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (v >= 5 and v < 7):
			a = a + 1
	v = array(eval(input("Media: "))
print(a)
			

-- ERROR:
File "XXXX", line 10
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:10:13) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (v >= 5 and v < 7):
			a = a + 1
	v = array(eval(input("Media: "))
				 
print(a)
			

-- ERROR:
File "XXXX", line 11
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:10:34) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (v >= 5 and v < 7):
			a = a + 1
	v = array(eval(input("Media: "))
	print(a)
			

-- ERROR:
File "XXXX", line 10
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:10:51) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (v >= 5 and v < 7):
			a = a + 1
	v = array(eval(input("Media: "))
				 print(a)
			

-- ERROR:
File "XXXX", line 10
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:11:08) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (v >= 5 and v < 7):
			a = a + 1
	print(a)
		
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:11:19) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (v >= 5 and v < 7):
			a = a + 1
	print(a)
		
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:12:32) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
			a = a + 1
	print(a)
		
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:13:07) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
			a = a + 1
	v = array(eval(input("Media: ")))
			
	print(a)
		
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:13:15) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
			a = a + 1
	v = array(eval(input("Media: ")))
			
	print(a)
		
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:13:43) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
	
	a = a + 1
	v = array(eval(input("Media: ")))
			
	print(a)
		
			

-- EXECUTION TIME:
1.74926
-- ERROR:
  File "/home/codebench/codes/1798/2563/main.py", line 9
    a = a + 1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:14:00) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
			a = a + 1
	v = array(eval(input("Media: ")))
			
	print(a)
		
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:14:03) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
			a = a + 1
	v = array(eval(input("Media: ")))
			
	print(a)
		
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:14:05) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))
i = 0
a = 0
while (size(v) > 1):
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
			a = a + 1
	v = array(eval(input("Media: ")))
			
	print(a)
		
			

-- EXECUTION TIME:
1.20589
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
Media: Media: 11
Media: 15
Media: 16
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Media: Media: 5
Media: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:18:03) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))

while (size(v) > 1):
	a = 0
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
			a = a + 1
	v = array(eval(input("Media: ")))
	print(a)
		
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:18:56) 
-- CODE:
from numpy import*
v = array(eval(input("Media: ")))

while (size(v) > 1):
	a = 0
	for elemento in v:
		if (elemento >= 5 and elemento < 7):
			a = a + 1
	v = array(eval(input("Media: ")))
	print(a)
		
			

-- EXECUTION TIME:
1.24547
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
